# starlink-grpc-client

./: CONTRIBUTING.md  Cargo.toml  ISSUE_TEMPLATE.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  build.rs
.github/workflows/: ci.yml
examples/: stream.rs  stream_log_output.rs  stream_verbose.rs  usage.rs
proto_bindings/: mod.rs  space_x.api.device.rs  space_x.api.device.services.unlock.rs  space_x.api.satellites.network.rs  space_x.api.status.rs  space_x.api.telemetron.public.common.rs  space_x.api.telemetron.public.integrations.rs
protos/starlink_protos/spacex/api/device/: command.proto  common.proto  device.proto  dish.proto  wifi.proto  wifi_config.proto  wifi_util.proto
protos/starlink_protos/spacex/api/satellites/network/: ut_disablement_codes.proto
protos/starlink_protos/spacex/api/telemetron/public/integrations/: ut_pop_link_report.proto
src/: client.rs  error.rs  lib.rs  models.rs
tests/: client_tests.rs
