[package]
name = "starlink-grpc-client"
version = "0.4.1"
authors = ["Andy Wright <andywwright@icloud.com>"]
edition = "2021"
description = "A safe, async, type-safe client for querying Starlink Gen 3 Dishy via gRPC."
license = "MIT"
repository = "https://github.com/andywwright/starlink-grpc-client"
documentation = "https://docs.rs/starlink-grpc-client"
homepage = "https://github.com/andywwright/starlink-grpc-client"
readme = "README.md"

[features]
# by default, we do NOT regenerate protos (no protoc needed) 
default = []
# to force proto regen into proto_bindings, run with `--features build-protos`
build-protos = []

[dependencies]
tokio = { version = "1.45", features = ["full"] }
tonic = { version = "0.13.1", features = ["transport"] }
prost = "0.13.5"
prost-types = "0.13.5"
thiserror = "2.0"
futures = "0.3"

[build-dependencies]
tonic-build = "0.13.1"
prost-build = "0.13.5"
protoc-bin-vendored = "3"